--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,11 +20,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "transform = transforms.Compose([\n",
+    "    transforms.RandomCrop(32, padding=4),\n",
+    "    transforms.RandomHorizontalFlip(),\n",
+    "    transforms.RandomRotation(15),\n",
+    "    transforms.ColorJitter(brightness=0.2, contrast=0.2),\n",
     "    transforms.ToTensor(),\n",
     "    transforms.Normalize((0.5, 0.5, 0.5), (0.5, 0.5, 0.5))\n",
     "])"
@@ -32,9 +36,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 170M/170M [00:57<00:00, 2.94MB/s] \n"
+     ]
+    }
+   ],
    "source": [
     "train_data = torchvision.datasets.CIFAR10(root='./data', train=True, transform=transform, download=True)\n",
     "test_data = torchvision.datasets.CIFAR10(root='./data', train=False, transform=transform, download=True)\n",
@@ -45,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +75,7 @@
        "torch.Size([3, 32, 32])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,34 +95,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "class NeuralNet(nn.Module):\n",
     "    def __init__(self):\n",
     "        super().__init__()\n",
-    "\n",
-    "        self.conv1 = nn.Conv2d(3, 12, 5) # 32 - 5/1 = 27 + 1 = 28 -> (12, 28, 28)\n",
-    "        self.pool = nn.MaxPool2d(2, 2) # (12, 14, 14)\n",
-    "        self.conv2 = nn.Conv2d(12, 24, 5) # 14 - 5 / 1 + 1 = 10 -> (24, 10, 10) -> (24, 5, 5) -> Flatten (24 * 5 *5)\n",
-    "        self.fc1 = nn.Linear(24 * 5 * 5, 120)\n",
-    "        self.fc2 = nn.Linear(120, 84)\n",
-    "        self.fc3 = nn.Linear(84, 10) # output must be 10\n",
-    "\n",
+    "        \n",
+    "        # First block\n",
+    "        self.conv1 = nn.Conv2d(3, 32, 3, padding=1)\n",
+    "        self.bn1 = nn.BatchNorm2d(32)   #add batch normalization after convulutions to stabilize learning\n",
+    "        self.conv2 = nn.Conv2d(32, 32, 3, padding=1)\n",
+    "        self.bn2 = nn.BatchNorm2d(32)\n",
+    "        self.pool1 = nn.MaxPool2d(2, 2)\n",
+    "        self.dropout1 = nn.Dropout(0.25) #add dropout before fc to reduce overfittingg\n",
+    "        \n",
+    "        # Second block\n",
+    "        self.conv3 = nn.Conv2d(32, 64, 3, padding=1)\n",
+    "        self.bn3 = nn.BatchNorm2d(64)\n",
+    "        self.conv4 = nn.Conv2d(64, 64, 3, padding=1)\n",
+    "        self.bn4 = nn.BatchNorm2d(64)\n",
+    "        self.pool2 = nn.MaxPool2d(2, 2)\n",
+    "        self.dropout2 = nn.Dropout(0.25)\n",
+    "        \n",
+    "        # Third block\n",
+    "        self.conv5 = nn.Conv2d(64, 128, 3, padding=1)\n",
+    "        self.bn5 = nn.BatchNorm2d(128)\n",
+    "        self.conv6 = nn.Conv2d(128, 128, 3, padding=1)\n",
+    "        self.bn6 = nn.BatchNorm2d(128)\n",
+    "        self.pool3 = nn.MaxPool2d(2, 2)\n",
+    "        self.dropout3 = nn.Dropout(0.25)\n",
+    "        \n",
+    "        # Fully connected layers\n",
+    "        self.fc1 = nn.Linear(128 * 4 * 4, 512)\n",
+    "        self.bn7 = nn.BatchNorm1d(512)\n",
+    "        self.dropout4 = nn.Dropout(0.5)\n",
+    "        self.fc2 = nn.Linear(512, 10)\n",
+    "        \n",
     "    def forward(self, x):\n",
-    "        x = self.pool(F.relu(self.conv1(x)))\n",
-    "        x = self.pool(F.relu(self.conv2(x)))\n",
+    "        # First block\n",
+    "        x = F.relu(self.bn1(self.conv1(x)))\n",
+    "        x = F.relu(self.bn2(self.conv2(x)))\n",
+    "        x = self.pool1(x)\n",
+    "        x = self.dropout1(x)\n",
+    "        \n",
+    "        # Second block\n",
+    "        x = F.relu(self.bn3(self.conv3(x)))\n",
+    "        x = F.relu(self.bn4(self.conv4(x)))\n",
+    "        x = self.pool2(x)\n",
+    "        x = self.dropout2(x)\n",
+    "        \n",
+    "        # Third block\n",
+    "        x = F.relu(self.bn5(self.conv5(x)))\n",
+    "        x = F.relu(self.bn6(self.conv6(x)))\n",
+    "        x = self.pool3(x)\n",
+    "        x = self.dropout3(x)\n",
+    "        \n",
+    "        # Fully connected\n",
     "        x = torch.flatten(x, 1)\n",
-    "        x = F.relu(self.fc1(x))\n",
-    "        x = F.relu(self.fc2(x))\n",
-    "        x = self.fc3(x)\n",
+    "        x = F.relu(self.bn7(self.fc1(x)))\n",
+    "        x = self.dropout4(x)\n",
+    "        x = self.fc2(x)\n",
+    "        \n",
     "        return x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -129,110 +182,30 @@
      "output_type": "stream",
      "text": [
       "training epoch 0...\n",
-      "loss: 2.2106\n",
+      "loss: 1.5439\n",
       "training epoch 1...\n",
-      "loss: 1.7635\n",
+      "loss: 1.1723\n",
       "training epoch 2...\n",
-      "loss: 1.5178\n",
+      "loss: 0.9904\n",
       "training epoch 3...\n",
-      "loss: 1.3984\n",
+      "loss: 0.8919\n",
       "training epoch 4...\n",
-      "loss: 1.2959\n",
+      "loss: 0.8112\n",
       "training epoch 5...\n",
-      "loss: 1.1967\n",
+      "loss: 0.7690\n",
       "training epoch 6...\n",
-      "loss: 1.1193\n",
+      "loss: 0.7247\n",
       "training epoch 7...\n",
-      "loss: 1.0606\n",
+      "loss: 0.6859\n",
       "training epoch 8...\n",
-      "loss: 1.0086\n",
+      "loss: 0.6522\n",
       "training epoch 9...\n",
-      "loss: 0.9640\n",
-      "training epoch 10...\n",
-      "loss: 0.9220\n",
-      "training epoch 11...\n",
-      "loss: 0.8858\n",
-      "training epoch 12...\n",
-      "loss: 0.8554\n",
-      "training epoch 13...\n",
-      "loss: 0.8224\n",
-      "training epoch 14...\n",
-      "loss: 0.7943\n",
-      "training epoch 15...\n",
-      "loss: 0.7673\n",
-      "training epoch 16...\n",
-      "loss: 0.7406\n",
-      "training epoch 17...\n",
-      "loss: 0.7185\n",
-      "training epoch 18...\n",
-      "loss: 0.6888\n",
-      "training epoch 19...\n",
-      "loss: 0.6677\n",
-      "training epoch 20...\n",
-      "loss: 0.6447\n",
-      "training epoch 21...\n",
-      "loss: 0.6237\n",
-      "training epoch 22...\n",
-      "loss: 0.6025\n",
-      "training epoch 23...\n",
-      "loss: 0.5830\n",
-      "training epoch 24...\n",
-      "loss: 0.5598\n",
-      "training epoch 25...\n",
-      "loss: 0.5372\n",
-      "training epoch 26...\n",
-      "loss: 0.5193\n",
-      "training epoch 27...\n",
-      "loss: 0.4979\n",
-      "training epoch 28...\n",
-      "loss: 0.4836\n",
-      "training epoch 29...\n",
-      "loss: 0.4621\n",
-      "training epoch 30...\n",
-      "loss: 0.4491\n",
-      "training epoch 31...\n",
-      "loss: 0.4232\n",
-      "training epoch 32...\n",
-      "loss: 0.4052\n",
-      "training epoch 33...\n",
-      "loss: 0.3954\n",
-      "training epoch 34...\n",
-      "loss: 0.3751\n",
-      "training epoch 35...\n",
-      "loss: 0.3608\n",
-      "training epoch 36...\n",
-      "loss: 0.3427\n",
-      "training epoch 37...\n",
-      "loss: 0.3330\n",
-      "training epoch 38...\n",
-      "loss: 0.3107\n",
-      "training epoch 39...\n",
-      "loss: 0.3023\n",
-      "training epoch 40...\n",
-      "loss: 0.2888\n",
-      "training epoch 41...\n",
-      "loss: 0.2752\n",
-      "training epoch 42...\n",
-      "loss: 0.2611\n",
-      "training epoch 43...\n",
-      "loss: 0.2458\n",
-      "training epoch 44...\n",
-      "loss: 0.2383\n",
-      "training epoch 45...\n",
-      "loss: 0.2206\n",
-      "training epoch 46...\n",
-      "loss: 0.2098\n",
-      "training epoch 47...\n",
-      "loss: 0.2039\n",
-      "training epoch 48...\n",
-      "loss: 0.1930\n",
-      "training epoch 49...\n",
-      "loss: 0.1918\n"
+      "loss: 0.6309\n"
      ]
     }
    ],
    "source": [
-    "for epoch in range(50):\n",
+    "for epoch in range(30):\n",
     "    print(f'training epoch {epoch}...')\n",
     "\n",
     "    running_loss = 0.0\n",
@@ -255,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +246,7 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,14 +258,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 66.02%\n"
+      "Accuracy: 80.44%\n"
      ]
     }
    ],
@@ -317,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -325,14 +298,17 @@
      "output_type": "stream",
      "text": [
       "Prediction: dog\n",
-      "Prediction: car\n",
+      "Prediction: plane\n",
       "Prediction: cat\n"
      ]
     }
    ],
    "source": [
     "base_transform = transforms.Compose([\n",
-    "    transforms.Resize((32, 32)),\n",
+    "    transforms.RandomCrop(32, padding=4),\n",
+    "    transforms.RandomHorizontalFlip(),\n",
+    "    transforms.RandomRotation(15),\n",
+    "    transforms.ColorJitter(brightness=0.2, contrast=0.2),\n",
     "    transforms.ToTensor(),\n",
     "    transforms.Normalize((0.5, 0.5, 0.5), (0.5, 0.5, 0.5))\n",
     "])\n",
