fix transform function

--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -20,15 +20,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "transform = transforms.Compose([\n",
-    "    transforms.RandomCrop(32, padding=4),\n",
-    "    transforms.RandomHorizontalFlip(),\n",
-    "    transforms.RandomRotation(15),\n",
-    "    transforms.ColorJitter(brightness=0.2, contrast=0.2),\n",
     "    transforms.ToTensor(),\n",
     "    transforms.Normalize((0.5, 0.5, 0.5), (0.5, 0.5, 0.5))\n",
     "])"
@@ -38,15 +34,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 170M/170M [00:57<00:00, 2.94MB/s] \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "train_data = torchvision.datasets.CIFAR10(root='./data', train=True, transform=transform, download=True)\n",
     "test_data = torchvision.datasets.CIFAR10(root='./data', train=False, transform=transform, download=True)\n",
@@ -95,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -182,25 +170,65 @@
      "output_type": "stream",
      "text": [
       "training epoch 0...\n",
-      "loss: 1.5439\n",
+      "loss: 1.5178\n",
       "training epoch 1...\n",
-      "loss: 1.1723\n",
+      "loss: 1.1451\n",
       "training epoch 2...\n",
-      "loss: 0.9904\n",
+      "loss: 0.9895\n",
       "training epoch 3...\n",
-      "loss: 0.8919\n",
+      "loss: 0.8900\n",
       "training epoch 4...\n",
-      "loss: 0.8112\n",
+      "loss: 0.8198\n",
       "training epoch 5...\n",
-      "loss: 0.7690\n",
+      "loss: 0.7713\n",
       "training epoch 6...\n",
-      "loss: 0.7247\n",
+      "loss: 0.7223\n",
       "training epoch 7...\n",
-      "loss: 0.6859\n",
+      "loss: 0.6884\n",
       "training epoch 8...\n",
-      "loss: 0.6522\n",
+      "loss: 0.6561\n",
       "training epoch 9...\n",
-      "loss: 0.6309\n"
+      "loss: 0.6258\n",
+      "training epoch 10...\n",
+      "loss: 0.5986\n",
+      "training epoch 11...\n",
+      "loss: 0.5814\n",
+      "training epoch 12...\n",
+      "loss: 0.5555\n",
+      "training epoch 13...\n",
+      "loss: 0.5424\n",
+      "training epoch 14...\n",
+      "loss: 0.5277\n",
+      "training epoch 15...\n",
+      "loss: 0.5087\n",
+      "training epoch 16...\n",
+      "loss: 0.4921\n",
+      "training epoch 17...\n",
+      "loss: 0.4823\n",
+      "training epoch 18...\n",
+      "loss: 0.4652\n",
+      "training epoch 19...\n",
+      "loss: 0.4534\n",
+      "training epoch 20...\n",
+      "loss: 0.4399\n",
+      "training epoch 21...\n",
+      "loss: 0.4313\n",
+      "training epoch 22...\n",
+      "loss: 0.4149\n",
+      "training epoch 23...\n",
+      "loss: 0.4110\n",
+      "training epoch 24...\n",
+      "loss: 0.4000\n",
+      "training epoch 25...\n",
+      "loss: 0.3961\n",
+      "training epoch 26...\n",
+      "loss: 0.3850\n",
+      "training epoch 27...\n",
+      "loss: 0.3713\n",
+      "training epoch 28...\n",
+      "loss: 0.3647\n",
+      "training epoch 29...\n",
+      "loss: 0.3559\n"
      ]
     }
    ],
@@ -237,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +274,7 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,7 +293,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 80.44%\n"
+      "Accuracy: 86.4%\n"
      ]
     }
    ],
@@ -290,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -305,10 +333,7 @@
    ],
    "source": [
     "base_transform = transforms.Compose([\n",
-    "    transforms.RandomCrop(32, padding=4),\n",
-    "    transforms.RandomHorizontalFlip(),\n",
-    "    transforms.RandomRotation(15),\n",
-    "    transforms.ColorJitter(brightness=0.2, contrast=0.2),\n",
+    "    transforms.Resize((32, 32)),\n",
     "    transforms.ToTensor(),\n",
     "    transforms.Normalize((0.5, 0.5, 0.5), (0.5, 0.5, 0.5))\n",
     "])\n",
