separate and improve transform pipeline

--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -24,7 +24,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "transform = transforms.Compose([\n",
+    "transform_train = transforms.Compose([\n",
+    "    transforms.RandomCrop(32, padding=4),\n",
+    "    transforms.RandomHorizontalFlip(),\n",
+    "    transforms.RandomRotation(5),\n",
+    "    transforms.ColorJitter(brightness=0.2, contrast=0.2),\n",
+    "    transforms.ToTensor(),\n",
+    "    transforms.Normalize((0.5, 0.5, 0.5), (0.5, 0.5, 0.5))\n",
+    "])\n",
+    "\n",
+    "\n",
+    "transform_test = transforms.Compose([\n",
     "    transforms.ToTensor(),\n",
     "    transforms.Normalize((0.5, 0.5, 0.5), (0.5, 0.5, 0.5))\n",
     "])"
@@ -36,8 +46,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_data = torchvision.datasets.CIFAR10(root='./data', train=True, transform=transform, download=True)\n",
-    "test_data = torchvision.datasets.CIFAR10(root='./data', train=False, transform=transform, download=True)\n",
+    "train_data = torchvision.datasets.CIFAR10(root='./data', train=True, transform=transform_train, download=True)\n",
+    "test_data = torchvision.datasets.CIFAR10(root='./data', train=False, transform=transform_test, download=True)\n",
     "\n",
     "train_loader = torch.utils.data.DataLoader(train_data, batch_size=32, shuffle=True, num_workers=2)\n",
     "test_loader = torch.utils.data.DataLoader(test_data, batch_size=32, shuffle=True, num_workers=2)\n"
@@ -170,65 +180,65 @@
      "output_type": "stream",
      "text": [
       "training epoch 0...\n",
-      "loss: 1.5178\n",
+      "loss: 1.6988\n",
       "training epoch 1...\n",
-      "loss: 1.1451\n",
+      "loss: 1.3928\n",
       "training epoch 2...\n",
-      "loss: 0.9895\n",
+      "loss: 1.2287\n",
       "training epoch 3...\n",
-      "loss: 0.8900\n",
+      "loss: 1.1270\n",
       "training epoch 4...\n",
-      "loss: 0.8198\n",
+      "loss: 1.0542\n",
       "training epoch 5...\n",
-      "loss: 0.7713\n",
+      "loss: 1.0018\n",
       "training epoch 6...\n",
-      "loss: 0.7223\n",
+      "loss: 0.9504\n",
       "training epoch 7...\n",
-      "loss: 0.6884\n",
+      "loss: 0.9113\n",
       "training epoch 8...\n",
-      "loss: 0.6561\n",
+      "loss: 0.8842\n",
       "training epoch 9...\n",
-      "loss: 0.6258\n",
+      "loss: 0.8455\n",
       "training epoch 10...\n",
-      "loss: 0.5986\n",
+      "loss: 0.8238\n",
       "training epoch 11...\n",
-      "loss: 0.5814\n",
+      "loss: 0.8002\n",
       "training epoch 12...\n",
-      "loss: 0.5555\n",
+      "loss: 0.7839\n",
       "training epoch 13...\n",
-      "loss: 0.5424\n",
+      "loss: 0.7660\n",
       "training epoch 14...\n",
-      "loss: 0.5277\n",
+      "loss: 0.7454\n",
       "training epoch 15...\n",
-      "loss: 0.5087\n",
+      "loss: 0.7286\n",
       "training epoch 16...\n",
-      "loss: 0.4921\n",
+      "loss: 0.7204\n",
       "training epoch 17...\n",
-      "loss: 0.4823\n",
+      "loss: 0.7046\n",
       "training epoch 18...\n",
-      "loss: 0.4652\n",
+      "loss: 0.6901\n",
       "training epoch 19...\n",
-      "loss: 0.4534\n",
+      "loss: 0.6773\n",
       "training epoch 20...\n",
-      "loss: 0.4399\n",
+      "loss: 0.6685\n",
       "training epoch 21...\n",
-      "loss: 0.4313\n",
+      "loss: 0.6635\n",
       "training epoch 22...\n",
-      "loss: 0.4149\n",
+      "loss: 0.6532\n",
       "training epoch 23...\n",
-      "loss: 0.4110\n",
+      "loss: 0.6443\n",
       "training epoch 24...\n",
-      "loss: 0.4000\n",
+      "loss: 0.6341\n",
       "training epoch 25...\n",
-      "loss: 0.3961\n",
+      "loss: 0.6315\n",
       "training epoch 26...\n",
-      "loss: 0.3850\n",
+      "loss: 0.6175\n",
       "training epoch 27...\n",
-      "loss: 0.3713\n",
+      "loss: 0.6142\n",
       "training epoch 28...\n",
-      "loss: 0.3647\n",
+      "loss: 0.6053\n",
       "training epoch 29...\n",
-      "loss: 0.3559\n"
+      "loss: 0.5971\n"
      ]
     }
    ],
@@ -293,7 +303,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 86.4%\n"
+      "Accuracy: 84.61%\n"
      ]
     }
    ],
@@ -332,7 +342,7 @@
     }
    ],
    "source": [
-    "base_transform = transforms.Compose([\n",
+    "transform_input = transforms.Compose([\n",
     "    transforms.Resize((32, 32)),\n",
     "    transforms.ToTensor(),\n",
     "    transforms.Normalize((0.5, 0.5, 0.5), (0.5, 0.5, 0.5))\n",
@@ -340,7 +350,7 @@
     "\n",
     "def load_image(img_path):\n",
     "    img = Image.open(img_path)\n",
-    "    img = base_transform(img)\n",
+    "    img = transform_input(img)\n",
     "    img = img.unsqueeze(0)\n",
     "    return img\n",
     "\n",
